Make it more easy to embed into another site

--- a/config_sample.json
+++ b/config_sample.json
@@ -1,6 +1,8 @@
 {
   "TWITTER_USER": "lateefjackson",
   "GOOGLE_MAPS_API": "REQUIRED",
+  "INIT_LATITUDE": "45.5236",
+  "INIT_LONGITUDE": "-122.6750",
   "CONSUMER_KEY": "REQUIRED",
   "CONSUMER_SECRET": "REQUIRED",
   "ACCESS_TOKEN_KEY": "REQUIRED",
